--- a/index.html
+++ b/index.html
@@ -1,81 +1,159 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Yummy</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="mohamed ">
-    <meta name="theme-color" content="#4285f4" />
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/all.min.css"/>
-    <link rel="stylesheet" href="css/media.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
-</head>
-<body>
-    <div class="side-nav-menu min-vh-100 bg-black  position-fixed left-0 overflow-hidden  d-flex top-0  ">
-        <div class="nav-tab  d-flex d-none flex-column justify-content-between min-vh-100 p-4">
-            <div class="links">
-                <ul class="list-unstyled overflow-hidden">
-                    <li  class="py-2 search-name cursor-pointer">Search</li>
-                    <li  class="py-2 Categories  cursor-pointer">Categories</li>
-                    <li  class="py-2 Area cursor-pointer">Area</li>
-                    <li class="py-2  cursor-pointer">Ingredients</li>
-                    <li  class="py-2  cursor-pointer">Contact Us</li>
-                </ul>
-            </div>
-            <div class="nav-footer">
-                <div class="icons  ">
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <link rel="shortcut icon" href="image/logo.png" type="image/x-icon">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/all.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Yummy</title>
+    </head>
+    <body>
+        <!-- landing page -->
+        <div class="landing">
+            <span class="loader"></span>
+        </div>
+        <!-- sidebar section -->
+        <div class="sidebar">
+            <div class="leftSide p-4 d-flex flex-column justify-content-between">
+                <div class="links p-0">
+                    <ul>
+                        <li class="nav-link" id="Search">Search</li>
+                        <li class="nav-link" id="Categories">Categories</li>
+                        <li class="nav-link" id="Area">Area</li>
+                        <li class="nav-link" id="Ingredients">Ingredients</li>
+                        <li class="nav-link" id="Contact">Contact Us</li>
+                    </ul>
+                </div>
+                <div class="social text-white">
                     <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-twitter px-1"></i>
                     <i class="fa-solid fa-globe"></i>
+                    <p>Copy Right 2023 © By Mohamed Maher All Rights Reserved</p>
                 </div>
-                <div class="footer">
-                    <p>Copyright Â© 2023 All Rights <br>Reserved.</p>
+            </div>
+            <div class="rightSide py-4 d-flex flex-column justify-content-between align-items-center">
+                <div class="logo"><img src="image/logo.png" alt="logo" class="w-100 px-2"></div>
+                <div class="icon fs-1 text-end"><i class="fa-solid fa-bars"></i></div>
+                <div class="info">
+                    <i class="fa-solid fa-globe d-block py-1"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
                 </div>
             </div>
         </div>
-        <div class="nav-header d-flex flex-column justify-content-between py-4 text-center  px-2 bg-white text-black">
-            <img class="logo" src="images/logo.png" alt="" srcset="">
-
-            <i class="fa-solid open-close-icon fa-align-justify fa-2x"></i>
-            <div>
-                <i class="fa-solid fa-globe d-block"></i>
-                <i class="fa-solid fa-share-nodes"></i>
+        <!-- start home -->
+        <section class="home ">
+            <div class="container">
+                <div class="row py-5 g-4" id="myRow"></div>
             </div>
-        </div>
-    </div>
-    <div class="container w-75 d-none  " id="searchContainer">
-        <div class="row py-4 ">
-            <div class="col-md-6 ">
-                <input onkeyup="getData(this.value)" class="form-control bg-transparent text-white" type="text" placeholder="Search By Name">
-            </div>
-            <div class="col-md-6">
-                <input onkeyup="getData(this.value)"  maxlength="1" class="form-control bg-transparent text-white" type="text" placeholder="Search By First Letter">
-            </div>
-        </div></div>
-    <div class="container container1 w-75">
-        <div class="row tt g-3 py-5">
-            <!-- <div class="col-md-3">
-                <div onclick="getMealDetails('52977')" class="meal position-relative overflow-hidden rounded-2 cursor-pointer">
-                    <img class="w-100" src="https://www.themealdb.com/images/media/meals/58oia61564916529.jpg" alt="" srcset="">
-                    <div class="meal-layer position-absolute d-flex   align-items-center text-black p-2">
-                        <h3>Corba</h3>
+        </section>
+        <!-- end home -->
+        <!-- start search -->
+        <section class="search d-none">
+            <div class="container">
+                <div class="row py-5" id="searchRow">
+                    <div class="col-md-6 col-sm-12">
+                        <input type="text" class="form-control bg-transparent text-white" placeholder="Search By Name" id="searchNameInput">
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <input type="text" class="form-control bg-transparent text-white" placeholder="Search By First Letter" id="searchLetterInput">
                     </div>
                 </div>
-        </div> -->
-        </div>
-    </div>
-   
-    <!-- ======================================================= -->
-    <div class="container  con-id d-none">
-        <div class="row py-5 g-4 " id="rowData">
-
-    </div>
-    </div>
-  
-    <script src="js/jquery-3.6.4.min.js" ></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script  src="js/index.js" ></script>
-</body>
+            </div>
+        </section>
+        <!-- end search -->
+        <!-- start Categories -->
+        <section class="Categories d-none">
+            <div class="container">
+                <div class="row py-5 g-4" id="myCategories"></div>
+            </div>
+        </section>
+        <!-- end Categories -->
+        <!-- start dateils -->
+        <section class="dateils d-none">
+            <div class="container">
+                <div class="row justify-content-between py-4">
+                    <h3 class="col-6 text-white">Details Meal</h3>
+                    <i class="fa-solid fa-xmark text-center fs-3 text-white align-self-center me-3" id="closePage"></i>
+                </div>
+                <div id="myDeatils"></div>
+            </div>
+        </section>
+        <!-- end dateils-->
+        <!-- start Categories Meals-->
+        <section class="Categories-Meals d-none">
+            <div class="container">
+                <div class="row py-5 g-4"></div>
+            </div>
+        </section>
+        <!-- end Categories Meals-->
+        <!-- start Area Meals-->
+        <section class="Area-Meals d-none">
+            <div class="container">
+                <div class="row py-5 g-4 text-white" id="Area-Meals"></div>
+            </div>
+        </section>
+        <!-- end Area Meals-->
+        <!-- start Area Categories-->
+        <section class="Area-Categories d-none">
+            <div class="container">
+                <div class="row py-5 g-4"></div>
+            </div>
+        </section>
+        <!-- end Area Categories -->
+        <!-- start ingredients Meals-->
+        <section class="ingredients-Meals d-none">
+            <div class="container">
+                <div class="row py-5 g-4 text-white" id="ingredients-Meals"></div>
+            </div>
+        </section>
+        <!-- end ingredients Meals-->
+        <!-- start ingredients Categories-->
+        <section class="ingredients-Categories d-none">
+            <div class="container">
+                <div class="row py-5 g-4"></div>
+            </div>
+        </section>
+        <!-- end ingredients Categories -->
+        <!-- start contact-->
+        <section class="contact vh-100 d-none">
+            <div class="container h-100">
+                <div class="row py-5 justify-content-center align-items-center h-100">
+                    <form class="d-flex flex-column justify-content-center align-items-center w-75">
+                        <div class="row gy-4 pb-4">
+                          <div class="col-md-6 col-sm-12">
+                            <input type="text" class="form-control" id="nameInput" placeholder="Enter Your Name">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongName">Special characters and numbers not allowed</div>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <input type="email" class="form-control" id="emailInput" placeholder="Enter Your Email">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongEmail">Not Valid Email"Example@yyy.zzz"</div>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <input type="number" class="form-control" id="phoneInput" placeholder="Enter Your Phone">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongPhone">Enter valid Phone Number</div>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <input type="number" class="form-control" id="ageInput" placeholder="Enter Your Age">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongAge">Enter valid Age</div>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <input type="password" class="form-control" id="passInput" placeholder="Enter Your Password">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongPass">Enter valid password<br>"Minimum eight characters, at least one letter and one number"</div>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <input type="password" class="form-control" id="repassInput" placeholder="Repassword">
+                            <div class="alert alert-danger mt-1 text-center d-none" id="wrongRepass">Enter valid repassword</div>
+                          </div>
+                      </div>
+                      <button class="btn btn-danger" id="submitBtn" disabled>Submit</button>
+                      </form>
+                </div>
+            </div>
+        </section>
+        <!-- end contact -->
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
