--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter px-1"></i>
                     <i class="fa-solid fa-globe"></i>
-                    <p>Copy Right 2023 © By Mohamed Maher All Rights Reserved</p>
+                    <p>Copy Right 2023 © By Mohamed elbahnasy All Rights Reserved</p>
                 </div>
             </div>
             <div class="rightSide py-4 d-flex flex-column justify-content-between align-items-center">
